# ntc_resource_library

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package.sh  package_and_launch_local.sh
examples/: generate.rs
resources/: resources.csv
sample_resources/: topics.json
sample_resources/English/: english_resource1.json  resources.json
sample_resources/Tech/: resources.json  tech_resource1.json  tech_resource2.json  topics.json
sample_resources/Tech/Blogging/: resources.json
src/: main.css  main.rs  resource.rs
