[package]
name = "ntc_resource_library"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "generate"
# test = false
# bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.2"
yew = "^0.19"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
csv = "1.1"
clap = {version = "3", features = ["derive"]}
stylist = {version = "0.10", features = ["yew"]}
